# cube_wgpu

./: Cargo.toml  README.md
src/: camera.rs  lib.rs  main.rs  resources.rs  shader.wgsl  texture.rs
